# scholar-gpt

./: .replit  README.md  app.py  config.py  pdf_utils.py  pyproject.toml  rag_pipeline.py
attached_assets/: Pasted-You-are-an-expert-Python-engineer-and-AI-engineer-Build-a-complete-production-ready-prototype-of-a-1763699849657_1763699849658.txt
