[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu==1.8.0",
    "fitz>=0.0.1.dev2",
    "langchain>=1.0.8",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.0.3",
    "openai>=2.8.1",
    "pymupdf==1.24.0",
    "python-dotenv==1.0.0",
    "streamlit>=1.51.0",
    "tiktoken==0.8.0",
]
